--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,78 @@
 body {
     font-family: 'Inter', sans-serif;
 }
+
 .dark {
     background-color: #232326;
     color: #F3F2F0;
 }
+
+.dark .nav-link {
+    color: #F3F2F0;
+}
+
+.light {
+    background-color: #F3F2F0;
+    color: #010101;
+}
+
+.light .nav-link {
+    color: #010101;
+}
+
 .wrapper {
     max-width: 1140px;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
 }
+
 .name {
     font-size: 28px;
 }
+
 .title-h1 {
     font-size: 74px;
     text-transform: uppercase;
 }
+
 .photo {
     margin-bottom: 120px;
     width: 100%;
 }
+
+header {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px;
+    padding-bottom: 60px;
+}
+
+.nav {
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0;
+    display: flex;
+}
+
+.nav-item {
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.nav-item:first-child {
+    padding-left: 0;
+}
+
+.nav-item:last-child {
+    padding-right: 0;
+}
+
 .nav-link {
     text-decoration: none;
-    color: #F3F2F0;
     font-size: 14px;
 }
+
 .nav-link:hover {
     color: #D40000;
 }
