--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,15 @@ body {
     fill: #FFFFFF
 }
 
+.dark .social,
+.dark .steps-item {
+    border-bottom: 1px solid #F3F2F0;
+}
+
+.dark .steps-item:first-child {
+    border-top: 1px solid #F3F2F0;
+}
+
 .light {
     background-color: #F3F2F0;
     color: #010101;
@@ -35,6 +44,15 @@ body {
 
 .light .triangle path {
     fill: #D40000
+}
+
+.light .social,
+.light .steps-item {
+    border-bottom: 1px solid #010101;
+}
+
+.light .steps-item:first-child {
+    border-top: 1px solid #010101;
 }
 
 .wrapper {
@@ -159,10 +177,11 @@ header {
 .skill {
     display: flex;
     justify-content: space-between;
+    padding-top: 60px;
 }
 
 .skill-item {
-    flex: 0 0 19%;
+    flex: 0 0 21%;
 }
 
 .skill .title-h3 {
@@ -183,6 +202,8 @@ header {
     justify-content: space-between;
     align-items: center;
     line-height: 150%;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .steps-title {
@@ -195,6 +216,8 @@ header {
 
 .steps-description {
     font-size: 16px;
+    flex: 0 0 49%;
+    max-width: 49%;
 }
 
 .circle-main {
