--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,9 @@ body {
 }
 
 .dark .social,
-.dark .steps-item {
+.dark .steps-item,
+.dark .about-title,
+.dark .about-description {
     border-bottom: 1px solid #F3F2F0;
 }
 
@@ -47,7 +49,9 @@ body {
 }
 
 .light .social,
-.light .steps-item {
+.light .steps-item,
+.light .about-title,
+.light .about-description {
     border-bottom: 1px solid #010101;
 }
 
@@ -69,6 +73,8 @@ body {
 .main .title-h1 {
     position: relative;
     z-index: 4;
+    margin-top: 38px;
+    letter-spacing: 0.03em;
 }
 
 .name {
@@ -88,15 +94,15 @@ body {
 }
 
 .photo {
-    margin-bottom: 120px;
+    margin-bottom: 94px;
     width: 100%;
 }
 
 header {
     display: flex;
     justify-content: space-between;
-    padding-top: 40px;
-    padding-bottom: 60px;
+    padding-top: 44px;
+    padding-bottom: 64px;
 }
 
 .nav {
@@ -107,8 +113,8 @@ header {
 }
 
 .nav-item {
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 13px;
+    padding-right: 15px;
 }
 
 .nav-item:first-child {
@@ -122,6 +128,7 @@ header {
 .nav-link {
     text-decoration: none;
     font-size: 14px;
+    transition: 0.2s color ease;
 }
 
 .nav-link:hover {
@@ -147,11 +154,43 @@ header {
     display: none;
 }
 
+.nav-social .nav-item {
+    position: relative;
+}
+
+.nav-social .nav-item::before {
+    content: "";
+    display: block;
+    width: 1px;
+    height: 24px;
+    background-color: rgba(243, 242, 240, 0.5);
+    position: absolute;
+    left: 0;
+    top: calc(50% - 12px);
+}
+
+.nav-social .nav-item:first-child::before {
+    display: none;
+}
+
+.nav-social .nav-item {
+    padding-left: 27px;
+    padding-right: 30px;
+}
+
+.nav-social .nav-item:last-child {
+    padding-right: 0;
+}
+
+.nav-social .nav-link {
+    font-size: 16px;
+}
+
 .social {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 60px;
-    margin-top: 100px;
+    padding-bottom: 49px;
+    margin-top: 106px;
 }
 
 .social-item:last-child {
@@ -164,6 +203,13 @@ header {
     align-items: center;
     font-size: 16px;
     font-weight: 700;
+    padding-bottom: 11px;
+    transition: 0.2s border-bottom ease;
+    border-bottom: 2px solid transparent;
+}
+
+.project:hover {
+    border-bottom: 2px solid #F3F2F0;
 }
 
 .project-img {
@@ -176,12 +222,16 @@ header {
 
 .skill {
     display: flex;
-    justify-content: space-between;
-    padding-top: 60px;
+    padding-top: 47px;
+}
+
+.skill .title-h3 {
+    letter-spacing: 0.03em;
 }
 
 .skill-item {
-    flex: 0 0 21%;
+    flex: 0 0 22%;
+    margin-right: 3%;
 }
 
 .skill .title-h3 {
@@ -193,7 +243,7 @@ header {
 }
 
 .section-steps {
-    padding-top: 180px;
+    padding-top: 167px;
     padding-bottom: 198px;
 }
 
@@ -202,8 +252,8 @@ header {
     justify-content: space-between;
     align-items: center;
     line-height: 150%;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 12px;
+    padding-bottom: 13px;
 }
 
 .steps-title {
@@ -211,7 +261,7 @@ header {
 }
 
 .steps-title span {
-    margin-right: 45px;
+    margin-right: 39px;
 }
 
 .steps-description {
@@ -225,14 +275,14 @@ header {
     height: 253px;
     position: absolute;
     left: -128px;
-    top: calc(50% - 126px);
+    top: calc(50% - 137px);
     z-index: 1;
 }
 
 .triangle {
     position: absolute;
     left: -151px;
-    top: 0;
+    top: -23px;
     z-index: 2;
 }
 
@@ -241,5 +291,72 @@ header {
     height: 106px;
     position: absolute;
     right: 38px;
-    top: calc(50% - 53px);
+    top: calc(50% - 60px);
+}
+
+.section-about {
+    padding-top: 108px;
+}
+
+.about {
+    display: grid;
+    grid-template: 290px / repeat(4, 1fr);
+}
+
+.about-title {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    font-size: 28px;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    padding-top: 67px;
+    padding-bottom: 62px;
+}
+
+.about-description {
+    grid-column: 3 / 5;
+    grid-row: 1 / 2;
+    font-size: 28px;
+    line-height: 150%;
+    opacity: 0.8;
+    padding: 62px 10px 62px 10px;
+}
+
+.about-01 {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+    padding: 47px 20px 35px 10px;
+}
+
+.about-02 {
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+    padding: 47px 10px 35px 14px;
+}
+
+.about-03 {
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+    padding: 16px 20px 16px 10px;
+}
+
+.about-04 {
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
+    padding: 16px 10px 16px 14px;
+}
+
+.about-item .description {
+    line-height: 150%;
+    opacity: 0.8;
+}
+
+.about-item>p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.about-item .title-h3 {
+    margin-bottom: 21px;
 }
