--- a/css/style.css
+++ b/css/style.css
@@ -526,3 +526,64 @@ header {
     opacity: 0.8;
     margin-top: 0;
 }
+
+.tech {
+    display: grid;
+    grid-template: 148px 148px / repeat(4, 1fr);
+    text-align: center;
+}
+
+.tech-item {
+    border-bottom: 1px solid rgba(243, 242, 240, 0.3);
+    border-right: 1px solid rgba(243, 242, 240, 0.3);
+    display: flex;
+    justify-content: center;
+}
+
+.tech-item:first-child,
+.tech-item:nth-child(5) {
+    border-left: 1px solid rgba(243, 242, 240, 0.3);
+}
+
+.html,
+.css,
+.js,
+.jquery {
+    border-top: 1px solid rgba(243, 242, 240, 0.3);
+}
+
+.tech-image {
+    filter: grayscale(100%);
+    transition: 0.2s ease;
+}
+
+.tech-item:hover .tech-image {
+    filter: grayscale(0);
+}
+
+.ui-tooltip {
+    background-color: #E31B1B;
+    border-color: #E31B1B !important;
+    border-radius: 0;
+    text-align: center;
+    box-shadow: none !important;
+    font-size: 10px;
+    color: rgba(243, 242, 240, 0.8);
+    max-width: 232px;
+    line-height: 150%;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.ui-tooltip-content::before {
+    content: "";
+    position: absolute;
+    display: block;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    top: -20px;
+    width: 2px;
+    border: 10px solid transparent;
+    border-bottom: 10px solid #E31B1B;
+}
