--- a/css/style.css
+++ b/css/style.css
@@ -716,3 +716,16 @@ header {
     z-index: 1;
     margin: 0;
 }
+
+.form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.form-title {
+    font-size: 28px;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    border-bottom: 1px solid #F3F2F0;
+    padding-top: 5px;
