--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,21 @@ header {
     top: calc(50% - 45px);
 }
 
+.circle-form {
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    left: -160px;
+    top: calc(50% - 127px);
+}
+
+.triangle-form {
+    position: absolute;
+    left: -184px;
+    top: 55px;
+    z-index: 2;
+}
+
 .section-about {
     padding-top: 108px;
 }
@@ -624,6 +639,10 @@ header {
     padding-bottom: 62px;
 }
 
+.tarif-item:nth-last-child(-n+2) {
+    border-bottom: none;
+}
+
 .tarif-title {
     font-size: 28px;
     font-weight: 700;
@@ -717,6 +736,11 @@ header {
     margin: 0;
 }
 
+.section-form {
+    padding-top: 90px;
+    padding-bottom: 129px;
+}
+
 .form {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -728,4 +752,141 @@ header {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     border-bottom: 1px solid #F3F2F0;
-    padding-top: 5px;
+    line-height: 150%;
+    position: relative;
+}
+
+.form-title p {
+    position: relative;
+    z-index: 1;
+}
+
+.form-description {
+    font-size: 28px;
+    line-height: 150%;
+    opacity: 0.8;
+    border-bottom: 1px solid #F3F2F0;
+    padding-bottom: 32px;
+}
+
+.form-item {
+    padding-top: 60px;
+}
+
+.form-social {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.form-social .nav-social {
+    margin-bottom: 2px;
+}
+
+.nav-social .nav-item:first-child {
+    padding-left: 0;
+}
+
+form {
+    font-size: 12px;
+    line-height: 150%;
+}
+
+form label {
+    opacity: 0.8;
+    margin-bottom: 12px;
+    display: block;
+}
+
+form input {
+    width: 100%;
+    padding: 25px 20px 26px;
+    background-color: #38383A;
+    border: none;
+    box-sizing: border-box;
+    margin-bottom: 18px;
+    color: #F3F2F0;
+}
+
+form input:focus {
+    outline: none;
+}
+
+form input[type=submit] {
+    background: #D40000;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 150%;
+    color: #F3F2F0;
+    padding: 20px 0;
+    margin-bottom: 0;
+}
+
+form select {
+    width: 100%;
+}
+
+.ui-selectmenu-button.ui-button {
+    width: 100%;
+    background-color: #38383A;
+    color: #fff;
+    padding: 25px 20px 25px;
+    box-sizing: border-box;
+    margin-bottom: 39px;
+    border-radius: 0;
+}
+
+.ui-button:hover,
+.ui-button:focus {
+    border: none;
+    outline: none;
+}
+
+.ui-selectmenu-menu .ui-menu {
+    background-color: #38383A;
+    color: rgba(243, 242, 240, 0.4);
+    font-size: 12px;
+}
+
+.ui-selectmenu-menu .ui-menu .ui-menu-item {
+    padding: 10px 20px;
+}
+
+.ui-selectmenu-menu .ui-menu .ui-menu-item:hover {
+    color: rgba(243, 242, 240, 1);
+    padding: 10px 20px;
+}
+
+footer {
+    border-top: 1px solid #F3F2F0;
+}
+
+.footer-top {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 66px;
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 43px;
+    padding-bottom: 41px;
+}
+
+.footer-bottom p {
+    margin: 0;
+    color: rgba(243, 242, 240, 0.3);
+}
+
+.footer-link {
+    color: rgba(243, 242, 240, 0.3);
+    border-bottom: 1px solid rgba(243, 242, 240, 0.3);
+    transition: 0.2s ease;
+    text-decoration: none;
+}
+
+.footer-link:hover {
+    color: rgba(243, 242, 240, 1);
+    border-bottom: 1px solid rgba(243, 242, 240, 1);
+}
