--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,17 @@ body {
 .dark .steps-item,
 .dark .about-title,
 .dark .about-description,
+.dark .work,
 .dark .tarif-item,
 .dark .tarif-title,
 .dark .tarif-description {
     border-bottom: 1px solid #F3F2F0;
 }
 
-.dark .ui-selectmenu-menu .ui-menu {
+.dark form input,
+.dark .ui-selectmenu-button.ui-button,
+.ui-selectmenu-menu {
     background-color: #38383A;
-    color: rgba(243, 242, 240, 0.4);
 }
 
 .dark .steps-item:first-child {
@@ -124,17 +126,9 @@ body {
     border-top: 1px solid #010101;
 }
 
-.light form input {
-    background-color: rgba(1, 1, 1, 0.05);
-    color: #010101;
-}
-
-.light .ui-selectmenu-button.ui-button {
-    background-color: rgba(1, 1, 1, 0.05);
-    color: #010101;
-}
-
-.light .ui-selectmenu-menu .ui-menu {
+.light form input,
+.light .ui-selectmenu-button.ui-button,
+.light .ui-selectmenu-menu {
     background-color: #E7E6E4;
     color: #010101;
 }
@@ -194,6 +188,19 @@ body {
 .photo {
     margin-bottom: 94px;
     width: 100%;
+    height: 310px;
+    position: relative;
+    overflow: hidden;
+}
+
+.photo img {
+    width: 100%;
+    height: 310px;
+    position: absolute;
+    left: -50%;
+    top: -50%;
+    transform: translate(50%, 50%);
+    object-fit: cover;
 }
 
 header {
@@ -320,6 +327,7 @@ header {
 
 .skill {
     display: flex;
+    flex-wrap: wrap;
     padding-top: 47px;
 }
 
@@ -356,6 +364,7 @@ header {
 
 .steps-title {
     font-size: 28px;
+    line-height: 150%;
 }
 
 .steps-title span {
@@ -552,6 +561,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     border-bottom: 1px solid #F3F2F0;
     padding-top: 60px;
     padding-bottom: 57px;
@@ -668,7 +678,6 @@ header {
     border-right: 1px solid rgba(243, 242, 240, 0.3);
     display: flex;
     justify-content: center;
-    padding: 34px 92px;
 }
 
 .tech-item:first-child,
@@ -690,6 +699,38 @@ header {
 
 .tech-item:hover .tech-image {
     filter: grayscale(0);
+}
+
+.html .tech-image {
+    width: 77px;
+}
+
+.css .tech-image {
+    width: 75px;
+}
+
+.js .tech-image {
+    width: 71px;
+}
+
+.jquery .tech-image {
+    width: 75px;
+}
+
+.bootstrap .tech-image {
+    width: 71px;
+}
+
+.php .tech-image {
+    width: 105px;
+}
+
+.vue .tech-image {
+    width: 81px;
+}
+
+.wp .tech-image {
+    width: 74px;
 }
 
 .ui-tooltip {
@@ -765,6 +806,10 @@ header {
     opacity: 0.8;
     border-bottom: 1px solid #F3F2F0;
     padding-bottom: 50px;
+}
+
+.tarif-header {
+    padding-right: 15px;
 }
 
 .tarif-name {
@@ -875,6 +920,8 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    position: relative;
+    z-index: 3;
 }
 
 .form-social .nav-social {
@@ -899,7 +946,6 @@ form label {
 form input {
     width: 100%;
     padding: 25px 20px 26px;
-    background-color: #38383A;
     border: none;
     box-sizing: border-box;
     margin-bottom: 18px;
@@ -932,7 +978,6 @@ form select {
 
 .ui-selectmenu-button.ui-button {
     width: 100%;
-    background-color: #38383A;
     color: #fff;
     padding: 25px 20px 25px;
     box-sizing: border-box;
@@ -947,7 +992,6 @@ form select {
 }
 
 .ui-selectmenu-menu .ui-menu {
-    background-color: #38383A;
     color: rgba(243, 242, 240, 0.4);
     font-size: 12px;
 }
@@ -968,7 +1012,8 @@ footer {
 .footer-top {
     display: flex;
     justify-content: space-between;
-    padding-top: 66px;
+    padding-top: 65px;
+    flex-wrap: wrap;
 }
 
 .footer-bottom {
@@ -976,6 +1021,7 @@ footer {
     justify-content: space-between;
     padding-top: 43px;
     padding-bottom: 41px;
+    flex-wrap: wrap;
 }
 
 .footer-bottom p {
@@ -993,4 +1039,604 @@ footer {
 .footer-link:hover {
     color: rgba(243, 242, 240, 1);
     border-bottom: 1px solid rgba(243, 242, 240, 1);
+}
+
+@media (min-width:901px) {
+    .header-mobile {
+        display: none;
+    }
+}
+
+@media (max-width:900px) {
+    header {
+        display: none;
+    }
+
+    .header-mobile {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 30px;
+        padding-bottom: 40px;
+    }
+
+    .menu {
+        background: transparent;
+        border: none;
+    }
+
+    .circle-main {
+        width: 200px;
+        height: 200px;
+        left: -99px;
+        top: calc(50% - 100px);
+    }
+
+    .triangle {
+        left: 0px;
+        top: inherit;
+        bottom: -80px;
+        width: 48px;
+    }
+
+    .title-h1 {
+        font-size: 50px;
+    }
+
+    .main .title-h1 {
+        margin-top: 28px;
+    }
+
+    .name {
+        font-size: 20px;
+    }
+
+    .social {
+        margin-top: 145px;
+    }
+
+    .skill {
+        justify-content: space-between;
+    }
+
+    .skill-item {
+        flex: 0 0 47%;
+        margin-right: 3%;
+    }
+
+    .about {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .about-description {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+    }
+
+    .about-01 {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+    }
+
+    .about-02 {
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+    }
+
+    .about-03 {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5;
+    }
+
+    .about-04 {
+        grid-column: 2 / 3;
+        grid-row: 4 / 5;
+    }
+
+    .steps-title {
+        font-size: 20px;
+        padding-right: 25px;
+    }
+
+    .nav-tabs {
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    .nav-tabs-item {
+        margin-right: 0;
+    }
+
+    .ui-helper-clearfix:before,
+    .ui-helper-clearfix:after {
+        display: none;
+    }
+
+    .circle-portfolio {
+        width: 465px;
+        height: 465px;
+        top: -341px;
+        left: inherit;
+        right: 29px;
+    }
+
+    .work {
+        padding-bottom: 0;
+    }
+
+    .work-item {
+        flex: 0 0 100%;
+        padding-bottom: 57px;
+    }
+
+    .advantages {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .tarif-title {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+        border-bottom: none !important;
+    }
+
+    .tarif-description {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+    }
+
+    .circle-tarif {
+        width: 250px;
+        height: 250px;
+        left: -155px;
+        top: calc(50% - 125px);
+    }
+
+    .form {
+        grid-template-columns: 1fr;
+    }
+
+    .form-title {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+
+    .form-description {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        position: relative;
+        z-index: 1;
+    }
+
+    .form-item {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+    }
+
+    .form-social {
+        grid-row: 4 / 5;
+        border-top: none !important;
+        align-items: center;
+    }
+
+    .circle-form {
+        left: -135px;
+        top: -34px;
+    }
+
+    .triangle-form {
+        bottom: inherit;
+        top: -54px;
+        left: 92px;
+        width: 35px;
+    }
+
+    .footer-top {
+        flex-direction: column-reverse;
+    }
+
+    .footer-top .nav,
+    .footer-bottom>p {
+        flex-basis: 100%;
+    }
+
+    .footer-top .nav {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .footer-top .nav-info {
+        justify-content: center;
+        padding-bottom: 30px;
+    }
+
+    .footer-bottom>p {
+        text-align: center;
+        padding-bottom: 20px;
+    }
+}
+
+@media (max-width:600px) {
+    .tech {
+        grid-template: 120px 120px / repeat(4, 1fr);
+    }
+
+    .html .tech-image,
+    .css .tech-image,
+    .js .tech-image,
+    .jquery .tech-image,
+    .bootstrap .tech-image,
+    .php .tech-image,
+    .vue .tech-image,
+    .wp .tech-image {
+        width: 50px;
+    }
+
+    .advantages {
+        grid-template-columns: 1fr;
+    }
+
+    .steps-item {
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .steps-title {
+        padding-right: 0;
+        margin-bottom: 0;
+    }
+
+    .steps-description {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+    .steps-title span {
+        margin-right: 20px;
+    }
+
+    .tarif {
+        grid-template-columns: 1fr;
+    }
+
+    .tarif-item {
+        grid-column: 1 / 2;
+        height: inherit;
+    }
+
+    .tarif-left {
+        border-bottom: none !important;
+        padding-bottom: 0;
+    }
+
+    .circle-price {
+        top: 0;
+    }
+
+    .title-h1 {
+        font-size: 40px;
+    }
+
+    .name {
+        font-size: 18px;
+    }
+
+    .main .title-h1 {
+        margin-top: 18px;
+    }
+}
+
+@media (max-width:550px) {
+
+    .photo,
+    .photo img {
+        height: 215px;
+    }
+
+    .photo {
+        margin-bottom: 64px;
+    }
+
+    .name {
+        margin-bottom: 0;
+    }
+
+    .main .title-h1 {
+        margin-top: 24px;
+    }
+
+    .title-h1 {
+        font-size: 28px;
+        line-height: 34px;
+    }
+
+    .circle-main {
+        width: 135px;
+        height: 135px;
+        left: -52px;
+        top: calc(50% - 67px);
+    }
+
+    .triangle {
+        bottom: -72px;
+        width: 29px;
+        left: 3px;
+    }
+
+    .circle-nav {
+        width: 60px;
+        height: 60px;
+        right: 27px;
+        top: calc(50% - 30px);
+    }
+
+    .social {
+        margin-top: 100px;
+        padding-bottom: 32px;
+    }
+
+    .skill {
+        padding-top: 30px;
+    }
+
+    .skill .title-h3 {
+        margin-bottom: 18px;
+    }
+
+    .skill-item {
+        padding-bottom: 10px;
+    }
+
+    .project-img {
+        background-size: cover;
+        width: 12px;
+        height: 9px;
+        margin-top: 1px;
+    }
+
+    .nav-social .nav-item {
+        padding-left: 8px;
+        padding-right: 12px;
+    }
+
+    .nav-social .nav-item::before {
+        height: 14px;
+        top: calc(50% - 7px);
+    }
+
+    .section-about {
+        padding-top: 0px;
+    }
+
+    .about-title {
+        border-bottom: none !important;
+        padding-bottom: 0;
+        padding-top: 63px;
+    }
+
+    .about-description {
+        padding: 23px 10px 63px 10px;
+    }
+
+    .about-01 {
+        padding: 30px 20px 35px 9px;
+    }
+
+    .about-02 {
+        padding: 32px 10px 35px 12px;
+    }
+
+    .about-03 {
+        padding: 0 20px 14px 9px;
+    }
+
+    .about-04 {
+        padding: 0 10px 14px 12px;
+    }
+
+    .section-steps {
+        padding-top: 44px;
+        padding-bottom: 61px;
+    }
+
+    .work-thumb,
+    .work-image {
+        height: 190px;
+    }
+
+    .project,
+    .nav-social .nav-link,
+    .title-h3,
+    .steps-description,
+    .work-list,
+    .work-time,
+    .advantages-description,
+    .tarif-pack,
+    .tarif-list,
+    form input[type=submit] {
+        font-size: 12px;
+    }
+
+    .skill,
+    .about-item,
+    .nav-tabs,
+    .tarif-text,
+    form input,
+    .footer-top .nav-link,
+    .footer-bottom {
+        font-size: 10px;
+    }
+
+    .about-title,
+    .about-description,
+    .steps-title,
+    .work-title,
+    .advantages-text,
+    .tarif-title,
+    .tarif-description,
+    .tarif-name,
+    .form-title,
+    .form-description {
+        font-size: 16px;
+    }
+
+    .tarif-price {
+        font-size: 22px;
+    }
+
+    .footer-top .nav-info {
+        font-size: 14px;
+    }
+
+    .circle-portfolio {
+        width: 197px;
+        height: 197px;
+        top: -220px;
+        right: 0;
+    }
+
+    .nav-tabs {
+        justify-content: flex-start;
+        width: 100%;
+    }
+
+    .nav-tabs-item {
+        margin-right: 20px;
+    }
+
+    .portfolio {
+        margin-bottom: 80px;
+    }
+
+    .circle-portfolio {
+        top: -148px;
+        right: 38px;
+    }
+
+    .work {
+        padding-top: 37px;
+    }
+
+    .work-title {
+        margin-bottom: 20px;
+    }
+
+    .work-list {
+        margin-bottom: 21px;
+    }
+
+    .work-item {
+        padding-bottom: 42px;
+    }
+
+    .html .tech-image,
+    .css .tech-image,
+    .js .tech-image,
+    .jquery .tech-image,
+    .bootstrap .tech-image,
+    .php .tech-image,
+    .vue .tech-image,
+    .wp .tech-image {
+        width: 35px;
+    }
+
+    .section-advantages {
+        padding-top: 63px;
+        padding-bottom: 80px;
+    }
+
+    .advantages {
+        grid-gap: 39px 22px;
+        padding-top: 40px;
+        margin-top: 39px;
+    }
+
+    .advantages-image svg {
+        width: 30px;
+        height: 30px;
+    }
+
+    .tech {
+        grid-template: 45px 45px / repeat(4, 1fr);
+    }
+
+    .section-tarif {
+        padding-top: 62px;
+    }
+
+    .circle-tarif {
+        width: 138px;
+        height: 138px;
+        left: -84px;
+        top: calc(50% - 69px);
+    }
+
+    .tarif-description {
+        font-size: 16px;
+        line-height: 150%;
+        opacity: 0.8;
+        padding-bottom: 8px;
+    }
+
+    .tarif-item {
+        padding-top: 0;
+        padding-bottom: 10px;
+    }
+
+    .circle-price {
+        display: none;
+    }
+
+    .section-form {
+        padding-top: 60px;
+    }
+
+    .circle-form {
+        width: 190px;
+        height: 190px;
+        left: -55px;
+    }
+
+    .triangle-form {
+        bottom: -72px;
+        width: 29px;
+        left: 99px;
+    }
+
+    .form-description {
+        margin-top: -13px;
+        padding-bottom: 16px;
+    }
+
+    .form-item {
+        padding-top: 39px;
+    }
+
+    form label {
+        font-size: 10px;
+        margin-bottom: 5px;
+    }
+
+    form input {
+        padding: 23px 20px;
+    }
+
+    .ui-selectmenu-button.ui-button {
+        padding: 21px 20px;
+    }
+
+    .ui-selectmenu-text {
+        font-size: 10px;
+    }
+
+    form input[type=submit] {
+        padding: 19px 0;
+        margin-bottom: 9px;
+    }
+
+    .section-form {
+        padding-bottom: 57px;
+    }
 }
